<resources>
    <string name="app_name">YouWatch</string>
    <string name="Login">Login</string>
    <string name="Username">username</string>
    <string name="password">password</string>
    <string name="display">Don\'t have an account?</string>
    <string name="create">Sign up</string>
    <string name="Logout">Logout</string>
    <string name="description">description</string>
    <string name="Timeline">timeline</string>
    <string name="Search">search</string>
    <string name="Compose">compose</string>
    <string name="Video">Record a video</string>
    <string name="Caption">Write a caption</string>
    <string name="Post">post</string>
    <string name="search_hint">hint</string>
    <string name="NoUser">Login</string>
    <string name="signupIssue">Something went wrong</string>
    <string name="loginSuccess">Success</string>
    <string name="loginIssue">Issue with Login</string>
    <string name="emptyCaption">Caption cannot be empty</string>
    <string name="noVideo">There is no video</string>
    <string name="noDirectory">There is no directory</string>
    <string name="noProfilePicture">There is no profile picture</string>
    <string name="noPicture">Picture wasn\'t taken!</string>
    <string name="textview">Username</string>
    <string name="wait">Wait</string>
    <string name="facebook_app_id">1217746085745196</string>
    <string name="fb_login_protocol_scheme">fb1217746085745196</string>
    <string name="facebook_client_token">a23299839d7bcabfe1f66bebfc9855a4</string>
    <string name="follow">Follow</string>
    <string name="following">Already following</string>
    <string name="SearchForVideo">Search for a video</string>
    <string name="suggestions">Suggestions</string>
    <string name="Unfollowed">Unfollowed</string>
    <string name="Followed">Just followed</string>
    <string name="You">you</string>
    <string name="Posted">posted a video</string>
</resources>