<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/Profile"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="profile"
        app:showAsAction="always" />
    <item
        android:id="@+id/Compose"
        android:icon="@drawable/ic_baseline_post_add_24"
        android:title="@string/Compose"
        app:showAsAction="always" />
    <item
        android:id="@+id/Search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/Search"
        app:showAsAction="always" />

    <item
        android:id="@+id/Timeline"
        android:icon="@drawable/ic_baseline_dynamic_feed_24"
        android:title="@string/Timeline"
        app:showAsAction="always" />
</menu>