<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ComposeFragment">


    <Button
        android:id="@+id/btVideo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Video"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="wrap_content"
        android:layout_height="350dp"
        android:layout_marginTop="50dp"
        />

    <EditText
        android:id="@+id/etCaption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="410dp"
        android:ems="10"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:text="@string/Caption"
        android:autofillHints="" />

    <Button
        android:id="@+id/btPost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="300dp"
        android:layout_marginTop="460dp"
        android:layout_marginEnd="0dp"
        android:text="@string/Post" />
</FrameLayout>